--- a/src/Header.css
+++ b/src/Header.css
@@ -10,15 +10,16 @@
     z-index: 1000;
     background: white;
 
+
 }   
 
-.input{
-    padding: 0.5rem 1.5 rem;
+.header input{
+    padding: 0.5rem 1.5rem;
     font-size: 1rem;
     outline: none;
 
 }
-.button{
+.header button{
     padding: 0.52rem 3rem;
     background: none;
     margin-left: 10px;
