--- a/src/Products.css
+++ b/src/Products.css
@@ -4,17 +4,16 @@
     align-items: center;
     flex-direction: column;
     padding: 0.2rem;
-    height: 430px;
+    height: 500px;
     width: 250px;
     border: 1px solid rgba(0,0,0,0.3);
-    border-radius: 10px;
+   
     overflow: hidden;
     border: none;
    
 }
 .product p{
-    position: absolute;
-    bottom: 60px;
+
     font-weight: bold;
 }
 .product h3{
@@ -35,7 +34,7 @@
     border-radius: 10px;
     background-color: rgb(255, 215, 142);
     transition: 0.2s ease;
-    bottom: 15px;
+    bottom: 45px;
     cursor: pointer;
 
 }
@@ -51,7 +50,8 @@
     left: 2%;
 }
 .product img{
-    height: 250px;
+    height: 180px;
+    width: 150px;
     object-fit: fill;
 }
     }
