--- a/src/App.css
+++ b/src/App.css
@@ -4,17 +4,15 @@
   
 }
 .products{
-position:absolute;
-left: 200px;
-top: 100px;
-  width: 90vw;
+  position:absolute;
+  top: 100px;
+  width: 100vw;
   display: grid;
-  grid-template-columns: repeat(auto-fit,300px);
+  grid-template-columns: repeat(auto-fit,400px);
   gap: 10px;
- 
-
-
+  justify-content: center;
 }
+
 .empytycard{
   margin-top: 50px;
   padding: 0.5rem;
@@ -27,26 +25,19 @@ top: 100px;
     grid-template-columns: (1,400px);
   }
 }
-
 .header{
-  position: sticky;
-  top: 0;
-  left: 0;
-  min-height: 10vh;
+  min-height: 15vh;
   border-bottom: 1px solid whitesmoke;
   display: flex;
   align-items:center;
-  justify-content: center;
-  z-index: 1000;
-  background: rgb(224, 249, 123);
-  gap: 20px;
+  background: rgb(248, 250, 239); 
 }   
 
 .header input{
   padding: 0.5rem 1.5rem;
   font-size: 1rem;
   outline: none;
-
+  border: none;
 }
 .header button{
   padding: 0.52rem 3rem;
@@ -55,25 +46,49 @@ top: 100px;
   font-size: 1rem;
   outline: none;
   cursor: pointer;
-  border: 1px solid gray;
+  border: 1px solid rgb(241, 232, 232);
+  transition: 0.2s ease;
+
+}
+.container{
+  display: flex;
+  gap: 30px;
+  align-items: center;
+  position: relative;
+  width: 90%;
+
+}
+.brand{
+  display: flex;
+  align-items: center;
+  gap: 20px;
+}
+.name{
+  font-size: 2rem;
+  font-size: bold;
+}
+.logo{
+  width: 50px;
+ 
 }
 .card{
-  position: absolute;
+  position: relative;
   height: 50px;
   width: 50px;
-  right: 2%;
   color: orange;
   border-radius: 50%;
   background: whitesmoke;
   display: flex;
   align-items: center;
   cursor: pointer;
+ 
+  right: 0;
 
 }
 .bagicon{
   position: relative;
   height: 40px;
-  left: 50%;
+  left: 45%;
   transform: translate(-50%);
   pointer-events: none;
   
@@ -94,10 +109,6 @@ top: 100px;
   font-size: 1rem;
   pointer-events: none;
 }
-.header button
-{
-  transition: 0.2s ease;
-}
 
 .header button:hover{
   background: black;
@@ -107,18 +118,22 @@ top: 100px;
 }
 .link{
   color: black;
-  font-size: large;
-  font-weight: 600;
+  font-size: 1.3rem;
+  font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+  text-decoration: none;
 
 }
 .navbar{
   display: flex;
-  gap: 10px;
-  
+  gap: 20px; 
 }
-@media (max-width:600px){
+@media (max-width:800px){
   .search
   {
       display: none;
   }
+  .brand{
+    display: none;
+  }
+
 }
